# essentia

./: .gitignore  README.md  build.gradle  settings.gradle  wscript
app/: build.gradle
app/src/androidTest/java/com/pixerylabs/android/essentia/: ExampleInstrumentedTest.kt
app/src/main/java/com/pixerylabs/android/essentia/wrapper/: Essentia.kt
app/src/test/java/com/pixerylabs/android/essentia/: ExampleUnitTest.kt
essentia/: build.gradle
essentia/src/main/cpp/: CMakeLists.txt  EssentiaWrapper.cpp
essentia/src/main/cpp/essentia/: .gitignore
essentia/src/main/cpp/essentia/src/: essentia_algorithms_reg.cpp  version.h
essentia/src/main/cpp/essentia/src/algorithms/: essentia_algorithms_reg.cpp
essentia/src/main/java/com/pixerylabs/android/essentia/wrapper/: Essentia.kt
gradle/wrapper/: gradle-wrapper.properties
src/algorithms/io/: yamloutput.cpp
src/essentia/: essentiamath.h  essentiautil.h  pool.cpp  pool.h  types.h
src/essentia/streaming/algorithms/: devnull.cpp  poolstorage.cpp  poolstorage.h
src/python/: essentia.cpp  parsing.cpp  pyalgorithm.cpp  pyvectorinput.cpp  typedefs.h
src/python/pytypes/: pypool.cpp
